2-я итерация ревью проекта №7